--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 @import "./components/select";
 @import "./components/nav";
 @import "./components/customPagination";
+@import "./components/btns";
 @import "./components/burger";
 @import "./components/card";
 @import "./components/header";
