--- a/src/scss/components/_oxford.scss
+++ b/src/scss/components/_oxford.scss
@@ -67,7 +67,7 @@
     position: absolute;
     top: 390px;
     padding: 22px 32px;
-    border: none;
+    // border: none;
     font-weight: 700;
     color: var(--white-color);
     background-color: var(--primary-color);
@@ -86,13 +86,29 @@
         width: 92.5%;
       }
     }
+
+    @include hover {
+      +& {
+        border-color: var(--primary-light-color);
+        background-color: var(--primary-light-color);
+      }
+    }
+
+    &:focus-visible:not(:hover):not(:active) {
+      border-color: var(--primary-shade-color);
+      background-color: var(--primary-light-color);
+    }
+
+    &:active {
+      border-color: var(--primary-shade-color);
+      background-color: var(--primary-shade-color);
+    }
   }
 
   &__picture {
     position: absolute;
     top: 0;
     width: 100%;
-    // height: 600px;
     z-index: 1;
 
     &-image {
