feat: add section categories and one card

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,4 +16,5 @@
 @import "./components/special";
 @import "./components/rating";
 @import "./components/oxford";
+@import "./components/categories";
 
