feat: add all card in section categories desctop size

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -15,7 +15,102 @@
             <source srcset="img/categories/categories1.webp" type="image/webp">
             <img loading="lazy" src="img/categories/categories1.png" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
           </picture>
-          <a href="#no-scrolling" class="categories__card-content-link">В каталог</a>
+          <a href="#no-scrolling" class="categories__card-content-link">
+            <span class="categories__card-content-link-text">В каталог</span>
+            <span class="categories__card-content-link-circle">
+              <svg class="categories__card-content-link-img">
+                <use xlink:href="img/sprite.svg#arrowBtn"></use>
+              </svg>
+            </span>
+          </a>
+        </article>
+      </li>
+      <li class="categories__card-item categories__card-item--chairs">
+        <article class="categories__card-content">
+          <ul class="list-reset categories__card-content-list">
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Мягкие</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Кресла-кровати</a></li>
+          </ul>
+          <h3 class="categories__card-content-title">Кресла</h3>
+          <picture class="categories__card-content-picture">
+            <source srcset="img/categories/categories2.avif" type="image/avif">
+            <source srcset="img/categories/categories2.webp" type="image/webp">
+            <img loading="lazy" src="img/categories/categories2.png" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
+          </picture>
+          <a href="#no-scrolling" class="categories__card-content-link">
+            <span class="categories__card-content-link-text">В каталог</span>
+            <span class="categories__card-content-link-circle">
+              <svg class="categories__card-content-link-img">
+                <use xlink:href="img/sprite.svg#arrowBtn"></use>
+              </svg>
+            </span>
+          </a>
+        </article>
+      </li>
+      <li class="categories__card-item categories__card-item--beds">
+        <article class="categories__card-content">
+          <ul class="list-reset categories__card-content-list">
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Односпальные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Двуспальные</a></li>
+          </ul>
+          <h3 class="categories__card-content-title">Кровати</h3>
+          <picture class="categories__card-content-picture">
+            <source srcset="img/categories/categories3.avif" type="image/avif">
+            <source srcset="img/categories/categories3.webp" type="image/webp">
+            <img loading="lazy" src="img/categories/categories3.png" class="categories__card-content-image" width="306" height="202" alt="Изображение дивана">
+          </picture>
+          <a href="#no-scrolling" class="categories__card-content-link">
+            <span class="categories__card-content-link-text">В каталог</span>
+            <span class="categories__card-content-link-circle">
+              <svg class="categories__card-content-link-img">
+                <use xlink:href="img/sprite.svg#arrowBtn"></use>
+              </svg>
+            </span>
+          </a>
+        </article>
+      </li>
+      <li class="categories__card-item categories__card-item--curbstones">
+        <article class="categories__card-content">
+          <ul class="list-reset categories__card-content-list">
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Тумбы</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Комоды</a></li>
+          </ul>
+          <h3 class="categories__card-content-title">Тумбы и комоды</h3>
+          <picture class="categories__card-content-picture">
+            <source srcset="img/categories/categories4.avif" type="image/avif">
+            <source srcset="img/categories/categories4.webp" type="image/webp">
+            <img loading="lazy" src="img/categories/categories4.png" class="categories__card-content-image" width="330" height="202" alt="Изображение дивана">
+          </picture>
+          <a href="#no-scrolling" class="categories__card-content-link">
+            <span class="categories__card-content-link-text">В каталог</span>
+            <span class="categories__card-content-link-circle">
+              <svg class="categories__card-content-link-img">
+                <use xlink:href="img/sprite.svg#arrowBtn"></use>
+              </svg>
+            </span>
+          </a>
+        </article>
+      </li>
+      <li class="categories__card-item categories__card-item--seat">
+        <article class="categories__card-content">
+          <ul class="list-reset categories__card-content-list">
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Деревянные</a></li>
+            <li class="categories__card-content-item"><a href="#no-scrolling" class="categories__card-content-item-link">Металлокаркас</a></li>
+          </ul>
+          <h3 class="categories__card-content-title">Стулья</h3>
+          <picture class="categories__card-content-picture">
+            <source srcset="img/categories/categories5.avif" type="image/avif">
+            <source srcset="img/categories/categories5.webp" type="image/webp">
+            <img loading="lazy" src="img/categories/categories5.png" class="categories__card-content-image" width="258" height="202" alt="Изображение дивана">
+          </picture>
+          <a href="#no-scrolling" class="categories__card-content-link">
+            <span class="categories__card-content-link-text">В каталог</span>
+            <span class="categories__card-content-link-circle">
+              <svg class="categories__card-content-link-img">
+                <use xlink:href="img/sprite.svg#arrowBtn"></use>
+              </svg>
+            </span>
+          </a>
         </article>
       </li>
     </ul>
