fix: bug section categories desctop size

--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -65,11 +65,12 @@
       }
 
       &-picture {
-        margin-bottom: 27px;
+        margin-bottom: auto;
         margin-left: -30px;
       }
 
       &-link {
+        margin-top: 27px;
         font-weight: 700;
         font-size: 16px;
         line-height: 120%;
