fix: bug img in section categories

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -11,9 +11,9 @@
           </ul>
           <h3 class="categories__card-content-title">Диваны</h3>
           <picture class="categories__card-content-picture">
-            <source srcset="img/categories/categories1.avif" type="image/avif">
-            <source srcset="img/categories/categories1.webp" type="image/webp">
-            <img loading="lazy" src="img/categories/categories1.png" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
+            <source srcset="img/categories/1categories1920@x1.avif, img/categories/1categories1920@x2.avif 2x, img/categories/1categories1920@x3.avif 3x" type="image/avif">
+            <source srcset="img/categories/1categories1920@x1.webp, img/categories/1categories1920@x2.webp 2x, img/categories/1categories1920@x3.webp 3x" type="image/webp">
+            <img loading="lazy" src="img/categories/1categories1920@x1.png" srcset="img/categories/1categories1920@x2.png 2x, img/categories/1categories1920@x3.png 3x" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
@@ -33,9 +33,9 @@
           </ul>
           <h3 class="categories__card-content-title">Кресла</h3>
           <picture class="categories__card-content-picture">
-            <source srcset="img/categories/categories2.avif" type="image/avif">
-            <source srcset="img/categories/categories2.webp" type="image/webp">
-            <img loading="lazy" src="img/categories/categories2.png" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
+            <source srcset="img/categories/2categories1920@x1.avif, img/categories/2categories1920@x2.avif 2x, img/categories/2categories1920@x3.avif 3x" type="image/avif">
+            <source srcset="img/categories/2categories1920@x1.webp, img/categories/2categories1920@x2.webp 2x, img/categories/2categories1920@x3.webp 3x" type="image/webp">
+            <img loading="lazy" src="img/categories/2categories1920@x1.png" srcset="img/categories/2categories1920@x2.png 2x, img/categories/2categories1920@x3.png 3x" class="categories__card-content-image" width="515" height="308" alt="Изображение кресла">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
@@ -55,9 +55,9 @@
           </ul>
           <h3 class="categories__card-content-title">Кровати</h3>
           <picture class="categories__card-content-picture">
-            <source srcset="img/categories/categories3.avif" type="image/avif">
-            <source srcset="img/categories/categories3.webp" type="image/webp">
-            <img loading="lazy" src="img/categories/categories3.png" class="categories__card-content-image" width="306" height="202" alt="Изображение дивана">
+            <source srcset="img/categories/3categories1920@x1.avif, img/categories/3categories1920@x2.avif 2x, img/categories/3categories1920@x3.avif 3x" type="image/avif">
+            <source srcset="img/categories/3categories1920@x1.webp, img/categories/3categories1920@x2.webp 2x, img/categories/3categories1920@x3.webp 3x" type="image/webp">
+            <img loading="lazy" src="img/categories/3categories1920@x1.png" srcset="img/categories/3categories1920@x2.png 2x, img/categories/3categories1920@x3.png 3x" class="categories__card-content-image" width="306" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
@@ -77,9 +77,9 @@
           </ul>
           <h3 class="categories__card-content-title">Тумбы и комоды</h3>
           <picture class="categories__card-content-picture">
-            <source srcset="img/categories/categories4.avif" type="image/avif">
-            <source srcset="img/categories/categories4.webp" type="image/webp">
-            <img loading="lazy" src="img/categories/categories4.png" class="categories__card-content-image" width="330" height="202" alt="Изображение дивана">
+            <source srcset="img/categories/4categories1920@x1.avif, img/categories/4categories1920@x2.avif 2x, img/categories/4categories1920@x3.avif 3x" type="image/avif">
+            <source srcset="img/categories/4categories1920@x1.webp, img/categories/4categories1920@x2.webp 2x, img/categories/4categories1920@x3.webp 3x" type="image/webp">
+            <img loading="lazy" src="img/categories/4categories1920@x1.png" srcset="img/categories/4categories1920@x2.png 2x, img/categories/4categories1920@x3.png 3x" class="categories__card-content-image" width="330" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
@@ -99,9 +99,9 @@
           </ul>
           <h3 class="categories__card-content-title">Стулья</h3>
           <picture class="categories__card-content-picture">
-            <source srcset="img/categories/categories5.avif" type="image/avif">
-            <source srcset="img/categories/categories5.webp" type="image/webp">
-            <img loading="lazy" src="img/categories/categories5.png" class="categories__card-content-image" width="258" height="202" alt="Изображение дивана">
+            <source srcset="img/categories/5categories1920@x1.avif, img/categories/5categories1920@x2.avif 2x, img/categories/5categories1920@x3.avif 3x" type="image/avif">
+            <source srcset="img/categories/5categories1920@x1.webp, img/categories/5categories1920@x2.webp 2x, img/categories/5categories1920@x3.webp 3x" type="image/webp">
+            <img loading="lazy" src="img/categories/5categories1920@x1.png" srcset="img/categories/5categories1920@x2.png 2x, img/categories/5categories1920@x3.png 3x" class="categories__card-content-image" width="258" height="308" alt="Изображение дивана">
           </picture>
           <a href="#no-scrolling" class="categories__card-content-link">
             <span class="categories__card-content-link-text">В каталог</span>
