--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,14 +3,17 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide hero__slide">
         <picture class="hero__pic">
+          <source srcset="img/hero/1hero320@x1.avif, img/hero/1hero320@x2.avif 2x, img/hero/1hero320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
           <source srcset="img/hero/1hero320@x1.webp, img/hero/1hero320@x2.webp 2x, img/hero/1hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
           <source srcset="img/hero/1hero320@x1.jpg, img/hero/1hero320@x2.jpg 2x, img/hero/1hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/1hero768@x1.avif, img/hero/1hero768@x2.avif 2x, img/hero/1hero768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
           <source srcset="img/hero/1hero768@x1.webp, img/hero/1hero768@x2.webp 2x, img/hero/1hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
           <source srcset="img/hero/1hero768@x1.jpg, img/hero/1hero768@x2.jpg 2x, img/hero/1hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/1hero1024@x1.avif, img/hero/1hero1024@x2.avif 2x, img/hero/1hero1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
           <source srcset="img/hero/1hero1024@x1.webp, img/hero/1hero1024@x2.webp 2x, img/hero/1hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
           <source srcset="img/hero/1hero1024@x1.jpg, img/hero/1hero1024@x2.jpg 2x, img/hero/1hero1024@x3.jpg 3x" media="(max-width: 1024px)">
-          <source srcset="img/hero/1hero1920@x1.avif" type="image/avif">
-          <source srcset="img/hero/1hero1920@x1.webp" type="image/webp">
+          <source srcset="img/hero/1hero1920@x1.avif, img/hero/1hero1920@x2.avif 2x, img/hero/1hero1920@x3.avif 3x" type="image/avif">
+          <source srcset="img/hero/1hero1920@x1.webp, img/hero/1hero1920@x2.webp 2x, img/hero/1hero1920@x3.webp 3x" type="image/webp">
           <img loading="lazy" class="hero__image" src="img/hero/1hero1920@x1.jpg" srcset="img/hero/1hero1920@x2.jpg 2x, img/hero/1hero1920@x3.jpg 3x" width="1920" height="400" alt="Первый слайд">
         </picture>
         <div class="container hero__container">
@@ -22,14 +25,17 @@
       </div>
       <div class="swiper-slide hero__slide">
         <picture class="hero__pic">
+          <source srcset="img/hero/2hero320@x1.avif, img/hero/2hero320@x2.avif 2x, img/hero/2hero320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
           <source srcset="img/hero/2hero320@x1.webp, img/hero/2hero320@x2.webp 2x, img/hero/2hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
           <source srcset="img/hero/2hero320@x1.jpg, img/hero/2hero320@x2.jpg 2x, img/hero/2hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/2hero768@x1.avif, img/hero/2hero768@x2.avif 2x, img/hero/2hero768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
           <source srcset="img/hero/2hero768@x1.webp, img/hero/2hero768@x2.webp 2x, img/hero/2hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
           <source srcset="img/hero/2hero768@x1.jpg, img/hero/2hero768@x2.jpg 2x, img/hero/2hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/2hero1024@x1.avif, img/hero/2hero1024@x2.avif 2x, img/hero/2hero1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
           <source srcset="img/hero/2hero1024@x1.webp, img/hero/2hero1024@x2.webp 2x, img/hero/2hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
           <source srcset="img/hero/2hero1024@x1.jpg, img/hero/2hero1024@x2.jpg 2x, img/hero/2hero1024@x3.jpg 3x" media="(max-width: 1024px)">
-          <source srcset="img/hero/2hero1920@x1.avif" type="image/avif">
-          <source srcset="img/hero/2hero1920@x1.webp" type="image/webp">
+          <source srcset="img/hero/2hero1920@x1.avif, img/hero/2hero1920@x2.avif 2x, img/hero/2hero1920@x3.avif 3x" type="image/avif">
+          <source srcset="img/hero/2hero1920@x1.webp, img/hero/2hero1920@x2.webp 2x, img/hero/2hero1920@x3.webp 3x" type="image/webp">
           <img loading="lazy" class="hero__image" src="img/hero/2hero1920@x1.jpg" srcset="img/hero/2hero1920@x2.jpg 2x, img/hero/2hero1920@x3.jpg 3x" width="1920" height="400" alt="Второй слайд">
         </picture>
         <div class="container hero__container">
@@ -41,14 +47,17 @@
       </div>
       <div class="swiper-slide hero__slide">
         <picture class="hero__pic">
+          <source srcset="img/hero/3hero320@x1.avif, img/hero/3hero320@x2.avif 2x, img/hero/3hero320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
           <source srcset="img/hero/3hero320@x1.webp, img/hero/3hero320@x2.webp 2x, img/hero/3hero320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
           <source srcset="img/hero/3hero320@x1.jpg, img/hero/3hero320@x2.jpg 2x, img/hero/3hero320@x3.jpg 3x" media="(max-width: 576px)">
+          <source srcset="img/hero/3hero768@x1.avif, img/hero/3hero768@x2.avif 2x, img/hero/3hero768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
           <source srcset="img/hero/3hero768@x1.webp, img/hero/3hero768@x2.webp 2x, img/hero/3hero768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
           <source srcset="img/hero/3hero768@x1.jpg, img/hero/3hero768@x2.jpg 2x, img/hero/3hero768@x3.jpg 3x" media="(max-width: 768px)">
+          <source srcset="img/hero/3hero1024@x1.avif, img/hero/3hero1024@x2.avif 2x, img/hero/3hero1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
           <source srcset="img/hero/3hero1024@x1.webp, img/hero/3hero1024@x2.webp 2x, img/hero/3hero1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
           <source srcset="img/hero/3hero1024@x1.jpg, img/hero/3hero1024@x2.jpg 2x, img/hero/3hero1024@x3.jpg 3x" media="(max-width: 1024px)">
-          <source srcset="img/hero/3hero1920@x1.avif" type="image/avif">
-          <source srcset="img/hero/3hero1920@x1.webp" type="image/webp">
+          <source srcset="img/hero/3hero1920@x1.avif, img/hero/3hero1920@x2.avif 2x, img/hero/3hero1920@x3.avif 3x" type="image/avif">
+          <source srcset="img/hero/3hero1920@x1.webp, img/hero/3hero1920@x2.webp 2x, img/hero/3hero1920@x3.webp 3x" type="image/webp">
           <img loading="lazy" class="hero__image" src="img/hero/3hero1920@x1.jpg" srcset="img/hero/3hero1920@x2.jpg 2x, img/hero/3hero1920@x3.jpg 3x" width="1920" height="400" alt="Третий слайд">
         </picture>
         <div class="container hero__container">
