feat: add all images in section categories

--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -11,6 +11,15 @@
           </ul>
           <h3 class="categories__card-content-title">Диваны</h3>
           <picture class="categories__card-content-picture">
+            <source srcset="img/categories/1categories320@x1.avif, img/categories/1categories320@x2.avif 2x, img/categories/1categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
+            <source srcset="img/categories/1categories320@x1.webp, img/categories/1categories320@x2.webp 2x, img/categories/1categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+            <source srcset="img/categories/1categories320@x1.png, img/categories/1categories320@x2.png 2x, img/categories/1categories320@x3.png 3x" media="(max-width: 576px)">
+            <source srcset="img/categories/1categories768@x1.avif, img/categories/1categories768@x2.avif 2x, img/categories/1categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
+            <source srcset="img/categories/1categories768@x1.webp, img/categories/1categories768@x2.webp 2x, img/categories/1categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+            <source srcset="img/categories/1categories768@x1.png, img/categories/1categories768@x2.png 2x, img/categories/1categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/1categories1024@x1.avif, img/categories/1categories1024@x2.avif 2x, img/categories/1categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
+            <source srcset="img/categories/1categories1024@x1.webp, img/categories/1categories1024@x2.webp 2x, img/categories/1categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+            <source srcset="img/categories/1categories1024@x1.png, img/categories/1categories1024@x2.png 2x, img/categories/1categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/1categories1920@x1.avif, img/categories/1categories1920@x2.avif 2x, img/categories/1categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/1categories1920@x1.webp, img/categories/1categories1920@x2.webp 2x, img/categories/1categories1920@x3.webp 3x" type="image/webp">
             <img loading="lazy" src="img/categories/1categories1920@x1.png" srcset="img/categories/1categories1920@x2.png 2x, img/categories/1categories1920@x3.png 3x" class="categories__card-content-image" width="515" height="308" alt="Изображение дивана">
@@ -33,6 +42,15 @@
           </ul>
           <h3 class="categories__card-content-title">Кресла</h3>
           <picture class="categories__card-content-picture">
+            <source srcset="img/categories/2categories320@x1.avif, img/categories/2categories320@x2.avif 2x, img/categories/2categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
+            <source srcset="img/categories/2categories320@x1.webp, img/categories/2categories320@x2.webp 2x, img/categories/2categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+            <source srcset="img/categories/2categories320@x1.png, img/categories/2categories320@x2.png 2x, img/categories/2categories320@x3.png 3x" media="(max-width: 576px)">
+            <source srcset="img/categories/2categories768@x1.avif, img/categories/2categories768@x2.avif 2x, img/categories/2categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
+            <source srcset="img/categories/2categories768@x1.webp, img/categories/2categories768@x2.webp 2x, img/categories/2categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+            <source srcset="img/categories/2categories768@x1.png, img/categories/2categories768@x2.png 2x, img/categories/2categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/2categories1024@x1.avif, img/categories/2categories1024@x2.avif 2x, img/categories/2categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
+            <source srcset="img/categories/2categories1024@x1.webp, img/categories/2categories1024@x2.webp 2x, img/categories/2categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+            <source srcset="img/categories/2categories1024@x1.png, img/categories/2categories1024@x2.png 2x, img/categories/2categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/2categories1920@x1.avif, img/categories/2categories1920@x2.avif 2x, img/categories/2categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/2categories1920@x1.webp, img/categories/2categories1920@x2.webp 2x, img/categories/2categories1920@x3.webp 3x" type="image/webp">
             <img loading="lazy" src="img/categories/2categories1920@x1.png" srcset="img/categories/2categories1920@x2.png 2x, img/categories/2categories1920@x3.png 3x" class="categories__card-content-image" width="515" height="308" alt="Изображение кресла">
@@ -55,6 +73,15 @@
           </ul>
           <h3 class="categories__card-content-title">Кровати</h3>
           <picture class="categories__card-content-picture">
+            <source srcset="img/categories/3categories320@x1.avif, img/categories/3categories320@x2.avif 2x, img/categories/3categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
+            <source srcset="img/categories/3categories320@x1.webp, img/categories/3categories320@x2.webp 2x, img/categories/3categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+            <source srcset="img/categories/3categories320@x1.png, img/categories/3categories320@x2.png 2x, img/categories/3categories320@x3.png 3x" media="(max-width: 576px)">
+            <source srcset="img/categories/3categories768@x1.avif, img/categories/3categories768@x2.avif 2x, img/categories/3categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
+            <source srcset="img/categories/3categories768@x1.webp, img/categories/3categories768@x2.webp 2x, img/categories/3categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+            <source srcset="img/categories/3categories768@x1.png, img/categories/3categories768@x2.png 2x, img/categories/3categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/3categories1024@x1.avif, img/categories/3categories1024@x2.avif 2x, img/categories/3categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
+            <source srcset="img/categories/3categories1024@x1.webp, img/categories/3categories1024@x2.webp 2x, img/categories/3categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+            <source srcset="img/categories/3categories1024@x1.png, img/categories/3categories1024@x2.png 2x, img/categories/3categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/3categories1920@x1.avif, img/categories/3categories1920@x2.avif 2x, img/categories/3categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/3categories1920@x1.webp, img/categories/3categories1920@x2.webp 2x, img/categories/3categories1920@x3.webp 3x" type="image/webp">
             <img loading="lazy" src="img/categories/3categories1920@x1.png" srcset="img/categories/3categories1920@x2.png 2x, img/categories/3categories1920@x3.png 3x" class="categories__card-content-image" width="306" height="308" alt="Изображение дивана">
@@ -77,6 +104,15 @@
           </ul>
           <h3 class="categories__card-content-title">Тумбы и комоды</h3>
           <picture class="categories__card-content-picture">
+            <source srcset="img/categories/4categories320@x1.avif, img/categories/4categories320@x2.avif 2x, img/categories/4categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
+            <source srcset="img/categories/4categories320@x1.webp, img/categories/4categories320@x2.webp 2x, img/categories/4categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+            <source srcset="img/categories/4categories320@x1.png, img/categories/4categories320@x2.png 2x, img/categories/4categories320@x3.png 3x" media="(max-width: 576px)">
+            <source srcset="img/categories/4categories768@x1.avif, img/categories/4categories768@x2.avif 2x, img/categories/4categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
+            <source srcset="img/categories/4categories768@x1.webp, img/categories/4categories768@x2.webp 2x, img/categories/4categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+            <source srcset="img/categories/4categories768@x1.png, img/categories/4categories768@x2.png 2x, img/categories/4categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/4categories1024@x1.avif, img/categories/4categories1024@x2.avif 2x, img/categories/4categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
+            <source srcset="img/categories/4categories1024@x1.webp, img/categories/4categories1024@x2.webp 2x, img/categories/4categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+            <source srcset="img/categories/4categories1024@x1.png, img/categories/4categories1024@x2.png 2x, img/categories/4categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/4categories1920@x1.avif, img/categories/4categories1920@x2.avif 2x, img/categories/4categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/4categories1920@x1.webp, img/categories/4categories1920@x2.webp 2x, img/categories/4categories1920@x3.webp 3x" type="image/webp">
             <img loading="lazy" src="img/categories/4categories1920@x1.png" srcset="img/categories/4categories1920@x2.png 2x, img/categories/4categories1920@x3.png 3x" class="categories__card-content-image" width="330" height="308" alt="Изображение дивана">
@@ -99,6 +135,15 @@
           </ul>
           <h3 class="categories__card-content-title">Стулья</h3>
           <picture class="categories__card-content-picture">
+            <source srcset="img/categories/5categories320@x1.avif, img/categories/5categories320@x2.avif 2x, img/categories/5categories320@x3.avif 3x" media="(max-width: 576px)" type="image/avif">
+            <source srcset="img/categories/5categories320@x1.webp, img/categories/5categories320@x2.webp 2x, img/categories/5categories320@x3.webp 3x" media="(max-width: 576px)" type="image/webp">
+            <source srcset="img/categories/5categories320@x1.png, img/categories/5categories320@x2.png 2x, img/categories/5categories320@x3.png 3x" media="(max-width: 576px)">
+            <source srcset="img/categories/5categories768@x1.avif, img/categories/5categories768@x2.avif 2x, img/categories/5categories768@x3.avif 3x" media="(max-width: 768px)" type="image/avif">
+            <source srcset="img/categories/5categories768@x1.webp, img/categories/5categories768@x2.webp 2x, img/categories/5categories768@x3.webp 3x" media="(max-width: 768px)" type="image/webp">
+            <source srcset="img/categories/5categories768@x1.png, img/categories/5categories768@x2.png 2x, img/categories/5categories768@x3.png 3x" media="(max-width: 768px)">
+            <source srcset="img/categories/5categories1024@x1.avif, img/categories/5categories1024@x2.avif 2x, img/categories/5categories1024@x3.avif 3x" media="(max-width: 1024px)" type="image/avif">
+            <source srcset="img/categories/5categories1024@x1.webp, img/categories/5categories1024@x2.webp 2x, img/categories/5categories1024@x3.webp 3x" media="(max-width: 1024px)" type="image/webp">
+            <source srcset="img/categories/5categories1024@x1.png, img/categories/5categories1024@x2.png 2x, img/categories/5categories1024@x3.png 3x" media="(max-width: 1024px)">
             <source srcset="img/categories/5categories1920@x1.avif, img/categories/5categories1920@x2.avif 2x, img/categories/5categories1920@x3.avif 3x" type="image/avif">
             <source srcset="img/categories/5categories1920@x1.webp, img/categories/5categories1920@x2.webp 2x, img/categories/5categories1920@x3.webp 3x" type="image/webp">
             <img loading="lazy" src="img/categories/5categories1920@x1.png" srcset="img/categories/5categories1920@x2.png 2x, img/categories/5categories1920@x3.png 3x" class="categories__card-content-image" width="258" height="308" alt="Изображение дивана">
