--- a/src/scss/components/_categories.scss
+++ b/src/scss/components/_categories.scss
@@ -7,6 +7,12 @@
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       gap: 32px;
+
+      @include tablet {
+        & {
+          grid-template-columns: repeat(9, 1fr);
+        }
+      }
     }
 
     &-item {
@@ -17,22 +23,54 @@
 
       &--sofas {
         grid-column: 1/7;
+        order: 1;
       }
 
       &--chairs {
         grid-column: 7/13;
+        order: 2;
+
+        @include tablet {
+          & {
+            grid-column: 4/7;
+            order: 4;
+          }
+        }
       }
 
       &--beds {
         grid-column: 1/5;
+        order: 3;
+
+        @include tablet {
+          & {
+            grid-column: 7/10;
+            order: 2;
+          }
+        }
       }
 
       &--curbstones {
         grid-column: 5/9;
+        order: 4;
+
+        @include tablet {
+          & {
+            grid-column: 1/4;
+            order: 3;
+          }
+        }
       }
 
       &--seat {
         grid-column: 9/13;
+        order: 5;
+
+        @include tablet {
+          & {
+            grid-column: 7/10;
+          }
+        }
       }
     }
 
