--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -98,11 +98,11 @@
     }
   }
 
-  @include small-tablet {
-    & {
-      top: 7%;
-    }
-  }
+  // @include small-tablet {
+  //   & {
+  //     top: 7%;
+  //   }
+  // }
 
   @include mobile {
     & {
