--- a/src/partials/oxford.html
+++ b/src/partials/oxford.html
@@ -1,11 +1,4 @@
 <section class="oxford">
-  <div class="container oxford__container">
-    <div class="oxford__content">
-      <h2 class="oxford__title">Оксфорд 1950</h2>
-      <p class="oxford__text">Новая коллекция изысканных кресел</p>
-    </div>
-    <a href="#no-scrolling" class="btn-reset btn-all oxford__link">Ознакомиться</a>
-  </div>
   <picture class="oxford__picture">
     <source srcset="img/oxford/oxford-bg320@1x.avif, img/oxford/oxford-bg320@2x.avif 2x, img/oxford/oxford-bg320@3x.avif 3x" type="image/avif" media="(max-width: 576px)">
     <source srcset="img/oxford/oxford-bg320@1x.webp, img/oxford/oxford-bg320@2x.webp 2x, img/oxford/oxford-bg320@3x.webp 3x" type="image/webp" media="(max-width: 576px)">
@@ -20,4 +13,11 @@
     <source srcset="img/oxford/oxford-bg1920@1x.webp, img/oxford/oxford-bg1920@2x.webp 2x, img/oxford/oxford-bg1920@3x.webp 3x" type="image/webp">
     <img loading="lazy" src="img/oxford/oxford-bg1920@1x.png" srcset="img/oxford/oxford-bg1920@2x.png 2x, img/oxford/oxford-bg1920@3x.png 3x" class="oxford__picture-image" width="1920" height="600" alt="Фоновая картинка - Oxford">
   </picture>
+  <div class="container oxford__container">
+    <!-- <div class="oxford__content"> -->
+      <!-- </div> -->
+    <h2 class="oxford__title">Оксфорд 1950</h2>
+    <p class="oxford__text">Новая коллекция изысканных кресел</p>
+    <a href="#no-scrolling" class="btn-reset btn-all oxford__link">Ознакомиться</a>
+  </div>
 </section>
