--- a/src/scss/components/_oxford.scss
+++ b/src/scss/components/_oxford.scss
@@ -1,34 +1,40 @@
 .oxford {
-  position: relative;
-  height: 600px;
+  display: grid;
+  grid-template-columns: 1fr;
 
-  @include mobile {
-    & {
-      height: 302px;
+  &__picture {
+    display: block;
+    grid-column: 1/-1;
+    grid-row: 1/2;
+
+    &-image {
+      width: 100%;
+      height: 600px;
+
+      @include mobile {
+        & {
+          height: 210px;
+        }
+      }
     }
   }
 
   &__container {
-    position: relative;
-  }
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    padding-top: 154px;
+    width: 100%;
 
-  &__content {
-    position: absolute;
-    max-width: 508px;
-    top: 154px;
-    z-index: 2;
-
-    @include high-tablet {
+    @include small-tablet {
       & {
-        left: 36px;
+        margin-left: 24px;
       }
     }
 
     @include mobile {
       & {
-        top: 32px;
-        left: 12px;
-        max-width: 187px;
+        margin-left: 0;
+        padding-top: 32px;
       }
     }
   }
@@ -49,6 +55,8 @@
   }
 
   &__text {
+    max-width: 508px;
+    margin-bottom: 49px;
     font-family: 'Open Sans';
     font-weight: 400;
     font-size: 48px;
@@ -57,6 +65,8 @@
 
     @include mobile {
       & {
+        max-width: 235px;
+        margin-bottom: 143px;
         font-size: 16px;
         line-height: 19px;
       }
@@ -64,25 +74,15 @@
   }
 
   &__link {
-    position: absolute;
-    top: 390px;
     padding: 20px 30px;
     font-weight: 700;
     color: var(--white-color);
     background-color: var(--primary-color);
     z-index: 2;
 
-    @include high-tablet {
-      & {
-        left: 36px;
-      }
-    }
-
     @include mobile {
       & {
-        top: 242px;
-        left: 12px;
-        width: 92.5%;
+        width: 100%;
       }
     }
 
@@ -101,24 +101,6 @@
     &:active {
       border-color: var(--primary-shade-color);
       background-color: var(--primary-shade-color);
-    }
-  }
-
-  &__picture {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-
-    &-image {
-      width: 100%;
-      height: 600px;
-
-      @include mobile {
-        & {
-          height: 210px;
-        }
-      }
     }
   }
 }
